# uabxautomate

./: Cargo.toml  LICENSE  README.md  example.toml
.github/workflows/: build.yml
src/: main.rs
