[package]
name = "uabxautomate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
glob = "0.3.1"
new_string_template = "1.4.0"
regex = "1.10.2"
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.111"
toml = "0.8.8"
unity_rs = "0.1.0"
wild = "2.2.0"

[patch.crates-io]
unity_rs = { git = "https://github.com/yuanyan3060/unity-rs.git", rev = "39cf2aa83f77d48f9f68c2e32fe72db6d3a0f94b" }
